# lists-api

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  run.py  settings.py  test.py
.github/workflows/: lists-api.yml  merge-with-master.yml  pull-request.yml
app/: app.py  exceptions.py
app/routes/v1/: app.py
app/routes/v1/handlers/: lists.py  tags.py  users.py
app/routes/v1/models/: lists.py
app/routes/v1/models/request/: lists.py
app/routes/v1/models/response/: lists.py  tags.py  users.py
db/: base.py  db.py  models.py
db/handlers/: base.py  image.py  list.py  tag.py  user.py
db/models/: base.py  image.py  list.py  tag.py  user.py
migrations/models/: 0_20220317193727_init.sql
services/: base.py  exceptions.py
services/v1/: lists.py  tags.py  user.py
tortoise/fields/: relational.py
utils/tools/: convertions.py  routers.py
