[tool.poetry]
name = "lists-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
python-dotenv = "^0.19.2"
uvicorn = "^0.17.6"
tortoise-orm = "^0.18.1"
aerich = "^0.6.2"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
