[tool.poetry]
name = "lists-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
python-dotenv = "^0.19.2"
uvicorn = "^0.17.6"
tortoise-orm = "^0.18.1"
aerich = "^0.6.2"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"
asynctest = "^0.13.0"
pycycle = "^0.0.8"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.1.11"
flake8-eradicate = "^1.2.0"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.8.0"
flake8-broken-line = "^0.4.0"
flake8-print = "^4.0.0"
pep8-naming = "^0.12.1"
xenon = "^0.9.0"
flake8-unused-arguments = "^0.0.9"
black = "^22.1.0"


[tool.aerich]
tortoise_orm = "settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
